fix: more sensible project title setup (resolves #719)

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -445,11 +445,10 @@ collections:
     sortable_fields: [title, order]
     fields:
       - {label: Layout, name: layout, widget: hidden, default: layouts/project.njk, i18n: duplicate}
-      - {label: Project Name, name: projectName, widget: string, required: true, hint: "Suggestion: If this is a sub-page of a project, enter the name of the project here.", i18n: true}
-      - {label: Project Name for URL, name: slug, widget: string, required: false, hint: "By default, the project name will be converted to a URL-safe format and used in the URL. To override this, enter a project name for the URL consisting only of lower case letters, numbers and hyphens, e.g. 'sample-project'. This must be unique.", i18n: true}
-      - {label: Body Title, name: title, widget: string, required: true, hint: "The title that appears after the Project Name and before the Body content. Suggestion: use a descriptive title which includes keywords from the project.", i18n: true}
+      - {label: Project Title, name: title, widget: string, required: true, hint: "The title of the project page or subpage. If this is a sub-page, the project title will be set by the Parent Project field below.", i18n: true}
+      - {label: Project Title for URL, name: slug, widget: string, required: false, hint: "By default, the project name will be converted to a URL-safe format and used in the URL. To override this, enter a project name for the URL consisting only of lower case letters, numbers and hyphens, e.g. 'sample-project'. This must be unique.", i18n: true}
       - {label: Project Short Name, name: shortName, widget: string, required: false, hint: Short name for the project used to generate text labels for project website links. This is not required for sub-pages of a project., i18n: true}
-      - {label: Parent Page, name: parentTitle, widget: relation, collection: projects, value_field: title, search_fields: [title], required: false, hint: This is required for sub-pages of a project to define the sub-page hierarchy., i18n: true}
+      - {label: Parent Project, name: parentTitle, widget: relation, collection: projects, value_field: title, search_fields: [title], required: false, hint: This is required for sub-pages of a project to indicate which project is the parent., i18n: true}
       - {label: Order, name: order, widget: number, required: false, hint: Order in which the project should appear., i18n: duplicate}
       - {label: Subpage Order, name: subPageOrder, widget: number, required: false, hint: "Hint: if using this, all sub-pages at the same level should have an order number specified. Leave blank to have sub-pages appear in alphabetical order.", i18n: duplicate}
       - {label: Thumbnail Image, name: thumbnailImage, widget: image, required: false, hint: "Suggested size: 680x494px. Images not fitting this aspect ratio will appear stretched.", i18n: duplicate}
