--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "d3-selection": "3.0.0",
     "decap-cms": "3.0.7",
-    "eleventy-plugin-fluid": "github:greatislander/eleventy-plugin-fluid#feat/check-for-custom-slug",
+    "eleventy-plugin-fluid": "2.7.0",
     "eleventy-plugin-pwa-v2": "1.0.0",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.1",
