feat: add sorting logic for resources (#709)
* feat: add sorting logic for resources

* feat: add svg for pin icon

* feat: add sorting and pinning features to the resources page

* fix: lint issue

* fix: show selected option for the sort select

* fix: sort select design based on PR feedback

* fix: update based on PR feedback

* fix: remove layout property from clusive.md

* fix: remove layout field from resources and add label for the sort filter

---------

Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -465,6 +465,7 @@ collections:
     create: true
     i18n: false
     fields:
+      - {label: Important, name: pinned, widget: boolean, default: false}
       - {label: Resource Name, name: title, widget: string, required: true}
       - {label: Description, name: description, widget: markdown, required: true, editor_components: [image, file]}
       - {label: Published Year, name: publishedYear, widget: string, hint: The year this resource was first publicly available., required: true}
