--- a/.github/workflows/backstop.yml
+++ b/.github/workflows/backstop.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   backstop:
     name: Run visual regression tests
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'dependabot[bot]'
+    if: github.repository_owner == 'inclusive-design' && github.actor != 'renovate[bot]'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
