--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
+    "@pkvach/eleventy-plugin-pwa": "2.0.0",
     "d3-selection": "3.0.0",
     "decap-cms": "3.6.2",
     "eleventy-plugin-fluid": "2.7.3",
-    "eleventy-plugin-pwa-v2": "1.0.2",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.3",
     "infusion": "4.8.0",
