--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "backstop:test": "backstop test --docker --config=backstop.config.js",
     "backstop:test:ci": "backstop test --config=backstop.config.js",
     "backstop:approve": "backstop approve --config=backstop.config.js",
-    "build": "npm-run-all -l clean -p build:*",
-    "build:cms": "node ./build-cms.js",
+    "build": "npm-run-all -l clean build",
     "build:eleventy": "cross-env NODE_ENV=production eleventy",
     "clean": "rimraf _site",
-    "cms": "decap-server",
-    "debug": "DEBUG=Eleventy* eleventy",
+    "debug": "cross-env DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
     "lint:styles": "stylelint \"**/*.scss\"",
@@ -21,9 +19,7 @@
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
-    "start": "npm-run-all -l clean -p start:*",
-    "start:cms": "node ./build-cms.js -w",
-    "start:eleventy": "run-p dev cms",
+    "start": "npm-run-all -l clean dev",
     "prepare": "husky"
   },
   "repository": {
@@ -40,35 +36,29 @@
   },
   "homepage": "https://github.com/inclusive-design/idrc#readme",
   "dependencies": {
-    "@11ty/eleventy": "2.0.1",
+    "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "@pkvach/eleventy-plugin-pwa": "2.0.0",
     "d3-selection": "3.0.0",
-    "decap-cms": "3.6.2",
     "eleventy-plugin-fluid": "2.7.3",
     "eleventy-plugin-sharp": "0.1.1",
     "eslint-config-fluid": "2.1.3",
     "infusion": "4.8.0",
     "markdown-it": "14.1.0",
-    "npm-run-all2": "7.0.2",
-    "nunjucks": "3.2.4",
-    "prop-types": "15.8.1",
-    "react": "16.14.0"
+    "npm-run-all2": "7.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "19.7.1",
     "@commitlint/config-conventional": "19.7.1",
     "backstopjs": "6.3.25",
-    "cross-env": "7.0.3",
-    "decap-server": "3.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.57.1",
     "eslint-config-fluid": "2.1.3",
     "eslint-plugin-jsdoc": "50.6.3",
     "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-yml": "1.16.0",
-    "estrella": "1.4.1",
     "husky": "9.1.7",
     "linkedom": "0.18.9",
     "lint-staged": "15.4.3",
