--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
-    "start": "npm-run-all -l clean dev",
-    "prepare": "husky"
+    "start": "npm-run-all -l clean dev"
   },
   "repository": {
     "type": "git",
