--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "2.7.3",
   "description": "Website for the Inclusive Design Research Centre.",
   "main": "eleventy.config.js",
+  "type": "module",
   "scripts": {
-    "backstop:reference": "backstop reference --docker --config=backstop.config.js",
-    "backstop:test": "backstop test --docker --config=backstop.config.js",
-    "backstop:test:ci": "backstop test --config=backstop.config.js",
-    "backstop:approve": "backstop approve --config=backstop.config.js",
+    "backstop:reference": "backstop reference --docker --config=backstop.config.cjs",
+    "backstop:test": "backstop test --docker --config=backstop.config.cjs",
+    "backstop:test:ci": "backstop test --config=backstop.config.cjs",
+    "backstop:approve": "backstop approve --config=backstop.config.cjs",
     "build": "npm-run-all -l clean build:eleventy",
     "build:eleventy": "cross-env NODE_ENV=production eleventy",
     "clean": "rimraf _site",
@@ -15,7 +16,7 @@
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
     "lint:styles": "stylelint \"**/*.scss\"",
-    "lint:scripts": "eslint \"**/*.{js,mjs,md}\"",
+    "lint:scripts": "eslint \"**/*.{js,cjs,md}\"",
     "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
     "lint:yml": "eslint \"**/*.yml\"",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
@@ -36,28 +37,29 @@
   },
   "homepage": "https://github.com/inclusive-design/idrc#readme",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "3.0.0",
     "@11ty/eleventy-navigation": "0.3.5",
-    "@11ty/eleventy-plugin-rss": "1.2.0",
+    "@11ty/eleventy-plugin-rss": "2.0.3",
     "@pkvach/eleventy-plugin-pwa": "2.0.0",
     "d3-selection": "3.0.0",
-    "eleventy-plugin-fluid": "2.7.3",
-    "eleventy-plugin-sharp": "0.1.1",
+    "eleventy-plugin-fluid": "3.0.1",
+    "eleventy-plugin-fluid-sass": "1.0.0",
     "eslint-config-fluid": "2.1.3",
     "infusion": "4.8.0",
     "markdown-it": "14.1.0",
     "npm-run-all2": "7.0.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/plugin-syntax-import-assertions": "^7.26.0",
     "@commitlint/cli": "19.7.1",
     "@commitlint/config-conventional": "19.7.1",
     "backstopjs": "6.3.25",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "eslint": "8.57.1",
     "eslint-config-fluid": "2.1.3",
     "eslint-plugin-jsdoc": "50.6.3",
     "eslint-plugin-markdown": "5.1.0",
-    "eslint-plugin-react": "7.37.4",
     "eslint-plugin-yml": "1.17.0",
     "husky": "9.1.7",
     "linkedom": "0.18.9",
@@ -74,7 +76,7 @@
   },
   "lint-staged": {
     "*.css": "stylelint --fix",
-    "*.{js,mjs,yml}": "eslint --fix",
+    "*.{js,cjs,yml}": "eslint --fix",
     "*.md": [
       "markdownlint-cli2 --fix",
       "eslint --fix"
