--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   "homepage": "https://github.com/inclusive-design/idrc#readme",
   "dependencies": {
     "@11ty/eleventy": "3.0.0",
+    "@11ty/eleventy-img": "6.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-rss": "2.0.3",
-    "@pkvach/eleventy-plugin-pwa": "2.0.0",
     "d3-selection": "3.0.0",
     "eleventy-plugin-fluid": "3.0.1",
     "eleventy-plugin-fluid-sass": "1.0.0",
@@ -50,8 +50,9 @@
     "npm-run-all2": "7.0.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.26.8",
-    "@babel/plugin-syntax-import-assertions": "^7.26.0",
+    "@babel/core": "7.26.9",
+    "@babel/eslint-parser": "7.26.8",
+    "@babel/plugin-syntax-import-assertions": "7.26.0",
     "@commitlint/cli": "19.7.1",
     "@commitlint/config-conventional": "19.7.1",
     "backstopjs": "6.3.25",
