--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,48 +1,55 @@
 name: Audit site with Lighthouse CI
 
 on:
-  pull_request:
-    branches: [dev]
+  push:
+    branches:
+      - "**"
+      - "!main"
 
 jobs:
-  lhci-mobile:
-    name: Run mobile Lighthouse CI audits
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'renovate[bot]'
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      site_url: ${{ steps.cloudflare_preview_url.outputs.preview_url }}
     steps:
       - uses: actions/checkout@v4
-      - name: Wait for Netlify deploy preview
-        uses: kukiron/wait-for-netlify-deploy@v1.2.2
-        id: netlify
+      - name: cloudflare-preview-url
+        uses: zentered/cloudflare-preview-url@v1.4.0
+        id: cloudflare_preview_url
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_EMAIL: ${{ secrets.CLOUDFLARE_ACCOUNT_EMAIL }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         with:
-          site_name: idrc
-          max_timeout: 300
+          cloudflare_project_id: idrc-ocadu-ca
+          wait_until_ready: true
+  lhci-mobile:
+    name: Run mobile Lighthouse CI audits
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
       - name: Run Lighthouse CI audits
         uses: treosh/lighthouse-ci-action@v12
         with:
           runs: 3
           urls: |
-            ${{ steps.netlify.outputs.url }}
+            ${{ needs.setup.outputs.site_url }}
           uploadArtifacts: false
           temporaryPublicStorage: true
           configPath: ./.lighthouserc.js
   lhci-desktop:
     name: Run desktop Lighthouse CI audits
-    if: github.repository_owner == 'inclusive-design' && github.actor != 'renovate[bot]'
     runs-on: ubuntu-latest
+    needs: setup
     steps:
       - uses: actions/checkout@v4
-      - name: Wait for Netlify deploy preview
-        uses: kukiron/wait-for-netlify-deploy@v1.2.2
-        id: netlify
-        with:
-          site_name: idrc
       - name: Run Lighthouse CI audits
         uses: treosh/lighthouse-ci-action@v12
         with:
           runs: 3
           urls: |
-            ${{ steps.netlify.outputs.url }}
+            ${{ needs.setup.outputs.site_url }}
           uploadArtifacts: false
           temporaryPublicStorage: true
           configPath: ./.lighthouserc.js
