fix: abandon translation keys

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -639,8 +639,6 @@ collections:
     label_singular: Project
     icon: inventory
     folder: src/collections/projects
-    slug: "{{title | localize}}"
-    preview_path: "/projects/{{slug}}"
     create: true
     i18n: true
     sortable_fields:
@@ -649,6 +647,11 @@ collections:
         field: order
         direction: ascending
     fields:
+      - label: UUID
+        name: uuid
+        widget: hidden
+        default: "{{uuid}}"
+        i18n: duplicate
       - label: Locale
         name: locale
         widget: hidden
@@ -679,7 +682,7 @@ collections:
                 name: link
                 widget: string
                 type: url
-                i18n: copy
+                i18n: duplicate
                 hint: If you want the project to link to an external site instead of display a page on this website, enter a URL here.
       - label: Short Title
         name: shortTitle
@@ -726,7 +729,7 @@ collections:
           - label: Funder Logo
             name: image
             widget: image
-            i18n: copy
+            i18n: duplicate
           - label: Funder Logo Alternative Text
             name: alt
             widget: string
@@ -740,13 +743,13 @@ collections:
               - {label: Right, value: right}
             default: left
             required: true
-            i18n: copy
+            i18n: duplicate
           - label: Funder Logo Scale
             name: scale
             widget: select
             options: [25, 50, 75, 100]
             required: true
-            i18n: copy
+            i18n: duplicate
           - label: Funder Logo Maximum Height
             widget: select
             options:
@@ -755,7 +758,7 @@ collections:
               - {label: 400px, value: 400px}
               - {label: 600px, value: 600px}
               - {label: 800px, value: 800px}
-            i18n: copy
+            i18n: duplicate
             name: maxHeight
             default: auto
           - label: Vertical Alignment
@@ -767,7 +770,7 @@ collections:
               - {label: Bottom, value: bottom}
             default: center
             required: true
-            i18n: copy
+            i18n: duplicate
       - label: Body
         name: body
         required: false
@@ -779,11 +782,15 @@ collections:
     label_singular: Project Subpage
     icon: menu_open
     folder: src/collections/project-subpages
-    slug: "{{title | localize}}"
     create: true
     i18n: true
     sortable_fields: [title, order]
     fields:
+      - label: UUID
+        name: uuid
+        widget: hidden
+        default: "{{uuid}}"
+        i18n: duplicate
       - label: Locale
         name: locale
         widget: hidden
@@ -798,17 +805,18 @@ collections:
         name: slug
         widget: string
         required: true
+        i18n: true
         hint: "By default, the project name will be converted to a URL-safe format and used in the URL. To override this, enter a project name for the URL consisting only of lower case letters, numbers and hyphens, e.g. 'sample-project'. This must be unique."
       - label: Parent Project
         name: parent
         widget: relation
         collection: projects
-        value_field: translationKey
+        value_field: slug
         search_fields: [title]
         display_fields: [title]
         required: false
         hint: This is required for sub-pages of a project to indicate which project is the parent.
-        i18n: copy
+        i18n: true
       - label: Order
         name: order
         widget: number
