ci: pass PR number

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -13,11 +13,14 @@ jobs:
       url: ${{ steps.netlify.outputs.url }}
     steps:
       - uses: actions/checkout@v4
+      - uses: jwalton/gh-find-current-pr/@v1
+        id: find-pr
       - name: Wait for Netlify deploy preview
         uses: kukiron/wait-for-netlify-deploy@v1.2.2
         id: netlify
         with:
           site_name: idrc
+          pr_number: ${{ steps.find-pr.outputs.pr }}
           max_timeout: 300
   lhci-mobile:
     name: Run mobile Lighthouse CI audits
